Refactored all the details regarding Sonar Report